--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,10 @@ code {
     monospace;
 }
 
+span{
+  user-select: none;
+}
+
 .TitleBar{
   -webkit-user-select: none;
   -webkit-app-region: drag;
@@ -86,4 +90,6 @@ code {
   .Button{
     @apply h-[32px] pl-1 pr-1 rounded text-[16px] bg-primary text-white
   }
+
+
 }
