Add Questions UI Implemented

--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,15 @@ code {
     monospace;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
+input[type=number] {
+  -moz-appearance:textfield; /* Firefox */
+}
 
 .TitleBar{
   -webkit-user-select: none;
