--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #FFFFFF; 
 }
  
 /* Handle */
@@ -63,6 +63,10 @@ input[type=number] {
   -webkit-app-region: drag;
 }
 
+.toastBody {
+  color: #4e6d87; 
+  font-size: 16px !important;
+}
 
 
 
@@ -92,14 +96,13 @@ input[type=number] {
   }
 
   .TextBox{
-    @apply h-[40px] w-[250px] shadow-lg pl-[6px] text-black text-[16px] border-b-primary 
+    @apply min-h-[40px] w-[250px] shadow-lg pl-[6px] text-black text-[16px] border-b-primary 
       border-2 outline-none rounded
   }
 
   .Button{
-    @apply h-[40px] pl-1 pr-1 rounded text-[16px] bg-primary text-white
+    @apply min-h-[40px] pl-1 pr-1 rounded text-[16px] bg-primary text-white hover:shadow-lg
   }
 
-  
 
 }
