--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
   text-align: center;
   opacity:1 ; 
-  background: rgb(0,114,255);
-  background: linear-gradient(143deg, #4e6d87 33%, #a3f0ff 92%); 
+  background: #1C6758;
   min-height: 100vh;
   height: 100vh;
   display: flex;
